--- a/css/pervasive.css
+++ b/css/pervasive.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: Aeogo Pixellated Regular;
-  src: url(fonts/AeogoPixellated-Regular.ttf);
+  src: url(../fonts/AeogoPixellated-Regular.ttf);
 }
 @font-face {
   font-family: DPComic Regular;
-  src: url(fonts/dpcomic.ttf);
+  src: url(../fonts/dpcomic.ttf);
 }
 
 
@@ -30,26 +30,23 @@ h3 {
   font-size: 24px;
   margin: 12px 0;
 }
-p {
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+h4 {
+  color: oklab(0.5 0 0);
+  font-family: DPComic Regular, 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 20px;
+  margin: 6px 0;
 }
+li,
+p {
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 16px;
+}
+main, 
 section {
   /* background-color: blanchedalmond; */
   background-color: wheat;
   border-radius: 50px;
   /* border: 5px outset whitesmoke; */
-}
-
-
-
-div.project-container {
-  display: flex;
-  justify-content: center;
-  flex-flow: row wrap;
-  gap: 20px;
-}
-div.project-container > section {
-  flex: 1 1 350px;
 }
 
 
@@ -64,4 +61,40 @@ a[href^="social"]::before {
 }
 abbr {
   cursor: help;
+}
+
+
+img {
+  margin: 30px;
+}
+
+
+caption {
+  caption-side: bottom;
+  padding: 10px;
+  font-weight: bold;
+}
+table {
+  margin: 1em;
+  border-collapse: collapse;
+  border: 2px solid black;
+  font-family: sans-serif;
+  font-size: 8px;
+  letter-spacing: 1px;
+}
+td {
+  border: 1px solid black;
+  padding: 8px 10px;
+  text-align: center;
+}
+th {
+  border: 1px solid black;
+  padding: 8px 10px;
+  background-color: plum;
+}
+tr:nth-child(even) td {
+  background-color: whitesmoke;
+}
+tr:nth-child(odd) td {
+  background-color: gainsboro;
 }
