--- a/css/pervasive.css
+++ b/css/pervasive.css
@@ -8,6 +8,13 @@
 }
 
 
+footer {
+  margin: 10px;
+  border-radius: 30px;
+  background-color: lightgreen;
+}
+
+
 body {
   background-color: lightcoral;
   margin: auto 10%;
@@ -34,10 +41,14 @@ h4 {
   color: oklab(0.5 0 0);
   font-family: DPComic Regular, 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   font-size: 20px;
-  margin: 6px 0;
+  margin: 6px 0 3px;
 }
-li,
 p {
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 16px;
+  margin: 0 0 1.5em;
+}
+li {
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: 16px;
 }
@@ -48,17 +59,15 @@ section {
   border-radius: 50px;
   /* border: 5px outset whitesmoke; */
 }
+address {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  margin: 0;
+  padding: 20px;
+}
 
 
-a[href^="mailto"]::before {
-  content: "📧 ";
-}
-a[href^="coding"]::before {
-  content: "💻 ";
-}
-a[href^="social"]::before {
-  content: "🌐 ";
-}
 abbr {
   cursor: help;
 }
@@ -66,6 +75,29 @@ abbr {
 
 img {
   margin: 30px;
+}
+img.github-logo {
+  width: 60px;
+  height: 60px;
+  margin: 0;
+  padding: 0;
+  border-radius: 100%;
+  transition: box-shadow 0.3s, background-color 0.3s;
+  box-shadow: none;
+}
+img.linkedin-logo {
+  width: 60px;
+  height: 60px;
+  margin: 0;
+  padding: 0;
+  border-radius: 4px;
+  transition: box-shadow 0.3s, background-color 0.3s;
+  box-shadow: none;
+}
+img.linkedin-logo:hover,
+img.github-logo:hover {
+  background-color: white;
+  box-shadow: 0 0 10px 10px white;
 }
 
 
@@ -97,4 +129,51 @@ tr:nth-child(even) td {
 }
 tr:nth-child(odd) td {
   background-color: gainsboro;
+}
+
+
+button {
+  cursor: pointer;
+  margin: 0px;
+}
+
+a:visited {
+  color: blueviolet;
+}
+a.mail-button {
+  height: 60px;
+  width: 60px
+}
+div.mail-link {
+  height: 60px;
+  width: 60px;
+  background-color: transparent;
+  background-image: url("../anim/mail-button/MailButton-Sheet.png");
+  background-size: 600px 60px;
+  border: none;
+
+  animation-name: close-mail;
+  animation-duration: 0.3s;
+  animation-timing-function: steps(9);
+  animation-delay: 0;
+  animation-iteration-count: 1;
+  animation-direction: reverse;
+  animation-fill-mode: reverse;
+}
+div.mail-link:hover {
+  animation-name: open-mail;
+  animation-duration: 0.3s;
+  animation-timing-function: steps(9);
+  animation-delay: 0;
+  animation-iteration-count: 1;
+  animation-direction: normal;
+  animation-fill-mode: forwards;
+}
+@keyframes open-mail {
+  from {background-position: 0 0;}
+  to   {background-position: -540px 0;}
+}
+@keyframes close-mail {
+  from {background-position: 0 0;}
+  to   {background-position: -540px 0;}
 }
