--- a/css/rules-rules-rules.css
+++ b/css/rules-rules-rules.css
@@ -13,7 +13,7 @@
 
 
 body {
-  background-image: url(../img/WoodFlooring.png);
+  background-image: url(../img/WoodFlooring.svg);
 
   background-attachment: fixed;
   background-position: center;
