--- a/css/pervasive.css
+++ b/css/pervasive.css
@@ -137,7 +137,7 @@ tr:nth-child(odd) td {
 
 button {
   cursor: pointer;
-  margin: 0px;
+  margin: 0;
 }
 
 a {
@@ -151,23 +151,20 @@ div.mail-link {
   height: 60px;
   width: 60px;
   background-color: transparent;
-  background-image: url("../anim/MailButton-Sheet.png");
+  background-image: url("../anim/MailButton-Sheet.svg");
   background-size: 600px 60px;
   border: none;
 
   animation-name: close-mail;
   animation-duration: 0.3s;
   animation-timing-function: steps(9);
-  animation-delay: 0;
   animation-iteration-count: 1;
   animation-direction: reverse;
-  animation-fill-mode: reverse;
 }
 div.mail-link:hover {
   animation-name: open-mail;
   animation-duration: 0.3s;
   animation-timing-function: steps(9);
-  animation-delay: 0;
   animation-iteration-count: 1;
   animation-direction: normal;
   animation-fill-mode: forwards;
@@ -184,7 +181,7 @@ div.resume-link {
   height: 60px;
   width: 60px;
   background-color: transparent;
-  background-image: url("../anim/ResumeButton-Sheet.png");
+  background-image: url("../anim/ResumeButton-Sheet.svg");
   background-size: 420px 60px;
   border: none;
 
@@ -194,7 +191,6 @@ div.resume-link {
   animation-delay: 0s;
   animation-iteration-count: 1;
   animation-direction: reverse;
-  animation-fill-mode: reverse;
 }
 div.resume-link:hover {
   animation-name: unfold-paper;
